feat: redesign with tailwind and daisyui

--- a/academie.html
+++ b/academie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -10,6 +10,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
   <title>L'Académie Ludus Mentis : Programme des Ateliers Jeux Vidéo</title>
   <meta name="description" content="Découvrez le programme de notre académie pour jeunes de 10 à 15 ans. Déroulement d'une séance, piliers pédagogiques et développement de l'intelligence collective.">
   <meta name="keywords" content="programme académie, atelier jeu vidéo, déroulement séance, pédagogie active, bienveillance, intelligence collective">
@@ -31,7 +33,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "serviceType": "Formation et coaching esport éducatif"
   }
   </script>
-  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -40,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
 
     <section class="section hero">
       <h1>L'académie : bien plus que du jeu vidéo</h1>
@@ -101,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="contact.html" class="btn">Je veux plus d'infos</a>
     </section>
 
-  </main>
+  </article></main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
