--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -8,6 +8,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
   <title>Contact et Inscription | Ludus Mentis à Walhain</title>
   <meta name="description" content="Posez vos questions ou demandez une présentation personnalisée de notre programme. L'équipe Ludus Mentis vous répond rapidement pour préparer la rentrée 2026.">
   <meta name="keywords" content="contact, inscription, information, email, formulaire, Walhain, académie esport, rentrée 2026">
@@ -31,7 +33,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   }
   </script>
   
-  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
   
   <style>
@@ -229,7 +230,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="header"></div>
   
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
     <section class="section hero">
       <h1>Préparez dès maintenant la rentrée 2026 !</h1>
       <p>Notre académie ouvrira ses portes en <strong>janvier 2026</strong>. Posez vos questions, demandez une présentation ou réservez votre place dès maintenant.</p>
@@ -326,7 +327,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>
       </p>
     </section>
-  </main>
+  </article></main>
   
   <div class="floating-cta">
     <a href="#contactForm" class="quick-contact">
