--- a/educateurs.html
+++ b/educateurs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -10,10 +10,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
   <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
   <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
   <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
-  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
   
@@ -24,7 +25,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
 
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
 
     <section class="section hero">
       <h1>Un allié pour l'école et les éducateurs</h1>
@@ -90,8 +91,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h2>Nos partenaires institutionnels</h2>
         <p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
         <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
-            <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
-            <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 80px; object-fit: contain;">
+            <img loading="lazy" src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
+            <img loading="lazy" src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 80px; object-fit: contain;">
         </div>
     </section>
 
@@ -106,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p style="text-align:center; margin-top:2em;"><a href="contact.html" class="btn">Contactez-nous pour échanger</a></p>
     </section>
 
-  </main>
+  </article></main>
 
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
