--- a/enjeux.html
+++ b/enjeux.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -10,10 +10,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
     <title>Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis</title>
     <meta name="description" content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes.">
     <meta name="keywords" content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique">
-    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -23,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div id="header"></div>
 
-    <main class="container">
+    <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
 
         <section class="section hero">
             <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
@@ -131,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-    </main>
+    </article></main>
     <div id="footer"></div>
     <script src="assets/js/include.js"></script>
 </body>
