--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -10,10 +10,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
   <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
   <meta name="description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
   <meta name="keywords" content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance">
-  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -22,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
 
     <section class="section card">
       <h1>Foire aux questions</h1>
@@ -69,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </p>
     </section>
 
-  </main>
+  </article></main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
