--- a/mentions.html
+++ b/mentions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -10,9 +10,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
   <title>Mentions Légales | Ludus Mentis</title>
   <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
-  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -21,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8"><article class="prose lg:prose-lg">
 
     <section class="section card">
       <h1>Mentions légales</h1>
@@ -41,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>Aucune donnée personnelle n’est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
     </section>
 
-  </main>
+  </article></main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
