--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -10,6 +10,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preload" href="/assets/tailwind.css" as="style">
+  <link rel="stylesheet" href="/assets/tailwind.css">
     <title>Ludus Mentis | Ateliers Jeux Vidéo pour Ados à Walhain</title>
     <meta name="description" content="Transformez la passion des jeux vidéo de votre ado en compétences de vie (communication, gestion du stress, esprit d'équipe). Découvrez nos ateliers éducatifs à Walhain.">
     <meta name="keywords" content="stage jeux vidéo, coaching esport, adolescent, Walhain, activité extra-scolaire, développement personnel, compétences socio-émotionnelles">
@@ -31,7 +33,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "areaServed": "Belgique"
     }
     </script>
-    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -40,10 +41,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
 
   <section class="section hero">
-  <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
+  <img loading="lazy" src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
  <h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
 <p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
 </section>
@@ -86,10 +87,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
       <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
         <a href="https://www.walhain.be/" target="_blank" rel="noopener">
-          <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 70px; object-fit: contain;">
+          <img loading="lazy" src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 70px; object-fit: contain;">
         </a>
         <a href="https://besf.be/" target="_blank" rel="noopener">
-          <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 70px; object-fit: contain;">
+          <img loading="lazy" src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 70px; object-fit: contain;">
         </a>
       </div>
       <p style="text-align:center; margin-top:2em;"><a href="academie.html" class="btn">Découvrir notre académie</a></p>
