--- a/methodologie.html
+++ b/methodologie.html
@@ -1,80 +1,72 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-<!-- End Google Tag Manager -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
-  <meta name="description" content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences.">
-  <meta name="keywords" content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
-</head>
-<body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-  <div id="header"></div>
-  <main class="container">
 
-    <section class="section card">
-      <h1>Notre méthodologie : du jeu à la compétence</h1>
-      <p>
+<html data-theme="autumn" lang="fr">
+<head>
+<meta charset="utf-8"/>
+<!-- Google Tag Manager -->
+<script data-cookie-category="analytics" data-src="https://www.googletagmanager.com/gtm.js?id=GTM-WMCMP74V" type="text/plain"></script>
+<!-- End Google Tag Manager -->
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
+<meta content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences." name="description"/>
+<meta content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance" name="keywords"/>
+<link href="assets/css/styles.css" rel="stylesheet"/>
+<link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<div id="header"></div>
+<main class="container" id="main">
+<section class="section card">
+<h1>Notre méthodologie : du jeu à la compétence</h1>
+<p>
         Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.
       </p>
-      <p>
+<p>
         Notre approche répond à quatre enjeux majeurs : 
         <strong>santé publique</strong> (lutter contre la sédentarité), 
         <strong>développement social</strong> (favoriser l'empathie), 
         <strong>harmonie familiale</strong> (apaiser les tensions liées aux écrans) 
         et <strong>vide structurel</strong> (offrir une alternative éducative numérique en Wallonie).
       </p>
-    </section>
-
-    <section class="section card">
-      <h2>Le cycle de Kolb : comment le jeu devient apprentissage</h2>
-      <p>
+</section>
+<section class="section card">
+<h2>Le cycle de Kolb : comment le jeu devient apprentissage</h2>
+<p>
         Notre secret réside dans l'application du <strong>cycle de Kolb</strong>, une méthode d'apprentissage en 4 étapes qui transforme une expérience concrète en compétence durable. Voici comment cela fonctionne lors d'une session de jeu :
       </p>
-      <ol>
-        <li>
-            <strong>L'expérience concrète (l'action) :</strong><br>
+<ol>
+<li>
+<strong>L'expérience concrète (l'action) :</strong><br/>
             L'équipe joue une partie sur un jeu comme <em>Overcooked</em>. Rapidement, le chaos s'installe : les commandes se croisent, des plats brûlent. L'équipe fait face à un échec concret, riche en émotions et en informations.
         </li>
-        <li>
-            <strong>L'observation réfléchie (le débriefing) :</strong><br>
+<li>
+<strong>L'observation réfléchie (le débriefing) :</strong><br/>
             L'animateur arrête le jeu et lance le débriefing : "Que s'est-il passé ? Qu'avez-vous ressenti à ce moment-là ?". Les jeunes sont amenés à prendre du recul sur leurs actions, sans jugement. "J'ai crié parce que personne ne m'écoutait", "On ne savait pas qui faisait quoi".
         </li>
-        <li>
-            <strong>La conceptualisation abstraite (la leçon) :</strong><br>
+<li>
+<strong>La conceptualisation abstraite (la leçon) :</strong><br/>
             Guidés par l'animateur, les jeunes tirent une leçon générale de l'expérience : "Pour réussir, il faut une communication claire et une bonne répartition des rôles". On établit alors des liens avec la vie de tous les jours : un travail de groupe à l'école, un projet en famille, etc.
         </li>
-        <li>
-            <strong>L'expérimentation active (la mise en pratique) :</strong><br>
+<li>
+<strong>L'expérimentation active (la mise en pratique) :</strong><br/>
             L'équipe relance une partie, mais avec une nouvelle stratégie, basée sur la leçon apprise : "Ok, pour cette manche, toi tu gères les cuissons, moi les découpes et on s'annonce les commandes à voix haute". Ils testent leur nouvelle compétence en conditions réelles et constatent leur progression.
-      </ol>
-      <p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
-    </section>
-
-    <section class="section card">
-      <h2>Nos engagements concrets</h2>
-      <ul>
-        <li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
-        <li><strong>Pédagogie structurée :</strong> Débriefings guidés en groupe pour transformer chaque partie en apprentissage (cycle de Kolb).</li>
-        <li><strong>Charte d’éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l’empathie dans chaque interaction.</li>
-        <li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
-      </ul>
-    </section>
-
-  </main>
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
-</body>
+      </li></ol>
+<p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
+</section>
+<section class="section card">
+<h2>Nos engagements concrets</h2>
+<ul>
+<li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
+<li><strong>Pédagogie structurée :</strong> Débriefings guidés en groupe pour transformer chaque partie en apprentissage (cycle de Kolb).</li>
+<li><strong>Charte d’éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l’empathie dans chaque interaction.</li>
+<li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
+</ul>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
+<script defer="True" src="assets/js/cookie-consent.js"></script></body>
 </html>
