--- a/educateurs.html
+++ b/educateurs.html
@@ -1,114 +1,100 @@
 <!DOCTYPE html>
-<html lang="fr">
+
+<html data-theme="autumn" lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+<meta charset="utf-8"/>
+<!-- Google Tag Manager -->
+<script data-cookie-category="analytics" data-src="https://www.googletagmanager.com/gtm.js?id=GTM-WMCMP74V" type="text/plain"></script>
 <!-- End Google Tag Manager -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
-  <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
-  <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
-</head>
-  
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
+<meta content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire." name="description"/>
+<meta content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être" name="keywords"/>
+<link href="assets/css/styles.css" rel="stylesheet"/>
+<link href="assets/images/Ludus-Mentis-transparent.png" rel="icon" type="image/png"/>
+<script src="https://cdn.tailwindcss.com"></script><link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/><script defer="True" src="assets/js/i18n.js"></script></head>
+<body><a class="sr-only focus:not-sr-only focus:btn focus:btn-primary m-2" href="#main">Aller au contenu principal</a>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" style="display:none;visibility:hidden" width="0"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-  <div id="header"></div>
-
-  <main class="container">
-
-    <section class="section hero">
-      <h1>Un allié pour l'école et les éducateurs</h1>
-      <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
-    </section>
-
-    <section class="section card">
-      <h2>Notre projet pédagogique : du jeu à la compétence</h2>
-      <p>
+<div id="header"></div>
+<main class="container" id="main">
+<section class="section hero">
+<h1>Un allié pour l'école et les éducateurs</h1>
+<p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
+</section>
+<section class="section card">
+<h2>Notre projet pédagogique : du jeu à la compétence</h2>
+<p>
         Notre approche ne se contente pas d'occuper les jeunes. Elle s'appuie sur une vision pédagogique structurée pour transformer le temps d'écran en une expérience d'apprentissage active et constructive.
       </p>
-      <ul>
-        <li>
-          <strong>Une réponse aux enjeux actuels :</strong> Nous comprenons les défis que les écrans posent (isolement, gestion du temps, émotions). Notre cadre est conçu pour y apporter des réponses concrètes et positives.
+<ul>
+<li>
+<strong>Une réponse aux enjeux actuels :</strong> Nous comprenons les défis que les écrans posent (isolement, gestion du temps, émotions). Notre cadre est conçu pour y apporter des réponses concrètes et positives.
         </li>
-        <li>
-          <strong>Une méthodologie éprouvée :</strong> Nous appliquons le <strong>cycle d'apprentissage de Kolb</strong> (action → réflexion → leçon → application). Chaque partie est suivie d'un débriefing guidé où les jeunes analysent leurs actions et développent des stratégies, ancrant durablement les apprentissages.
+<li>
+<strong>Une méthodologie éprouvée :</strong> Nous appliquons le <strong>cycle d'apprentissage de Kolb</strong> (action → réflexion → leçon → application). Chaque partie est suivie d'un débriefing guidé où les jeunes analysent leurs actions et développent des stratégies, ancrant durablement les apprentissages.
         </li>
-        <li>
-          <strong>Le développement de compétences clés :</strong> Notre programme est axé sur les savoir-être fondamentaux du 21e siècle : <strong>collaboration, communication, créativité et résolution de problèmes</strong>.
+<li>
+<strong>Le développement de compétences clés :</strong> Notre programme est axé sur les savoir-être fondamentaux du 21e siècle : <strong>collaboration, communication, créativité et résolution de problèmes</strong>.
         </li>
-      </ul>
-    </section>
-    
-    <section class="section card">
-      <h2>Des ponts concrets avec le monde scolaire</h2>
-      <p>Les compétences que nous développons dans l'arène virtuelle ont une application directe et mesurable dans la salle de classe et la cour de récréation. Voici comment :</p>
-      <div style="display: flex; flex-wrap: wrap; gap: 1em;">
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Communication et collaboration</h4>
-          <ul>
-            <li>Exprimer ses idées clairement lors d'un <strong>exposé oral</strong>.</li>
-            <li>Écouter activement et trouver sa place dans un <strong>travail de groupe</strong>.</li>
-            <li>Donner et recevoir un feedback constructif, sans agressivité.</li>
-          </ul>
-        </div>
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Gestion du stress et persévérance</h4>
-          <ul>
-            <li>Aborder un <strong>contrôle ou un examen</strong> avec plus de sérénité.</li>
-            <li>Gérer la frustration face à un exercice difficile sans abandonner.</li>
-            <li>Apprendre de ses erreurs pour mieux réussir ensuite.</li>
-          </ul>
-        </div>
-        <div style="flex: 1; min-width: 280px;">
-          <h4>Résolution de problèmes et esprit critique</h4>
-          <ul>
-            <li>Analyser une situation complexe (un problème de maths, une expérience scientifique) pour trouver une solution.</li>
-            <li>Anticiper les conséquences de ses actions.</li>
-            <li>Adapter sa stratégie face à un obstacle imprévu.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="section card" style="text-align:center;">
-        <h2>Notre kit pédagogique</h2>
-        <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <a href="assets/kit-pedagogique.pdf" class="btn" download> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
-    </section>
-    
-    <section class="section card">
-        <h2>Nos partenaires institutionnels</h2>
-        <p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
-        <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
-            <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
-            <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 80px; object-fit: contain;">
-        </div>
-    </section>
-
-    <section class="section card">
-      <h2>Construisons un partenariat</h2>
-      <p>Nous sommes convaincus que la collaboration entre les structures éducatives et des initiatives comme la nôtre est essentielle. Nous sommes à votre disposition pour :</p>
-      <ul>
-        <li>Présenter notre projet au sein de votre établissement.</li>
-        <li>Organiser un atelier de démonstration pour un groupe d'élèves.</li>
-        <li>Discuter de toute autre forme de collaboration.</li>
-      </ul>
-      <p style="text-align:center; margin-top:2em;"><a href="contact.html" class="btn">Contactez-nous pour échanger</a></p>
-    </section>
-
-  </main>
-
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
-</body>
+</ul>
+</section>
+<section class="section card">
+<h2>Des ponts concrets avec le monde scolaire</h2>
+<p>Les compétences que nous développons dans l'arène virtuelle ont une application directe et mesurable dans la salle de classe et la cour de récréation. Voici comment :</p>
+<div style="display: flex; flex-wrap: wrap; gap: 1em;">
+<div style="flex: 1; min-width: 280px;">
+<h4>Communication et collaboration</h4>
+<ul>
+<li>Exprimer ses idées clairement lors d'un <strong>exposé oral</strong>.</li>
+<li>Écouter activement et trouver sa place dans un <strong>travail de groupe</strong>.</li>
+<li>Donner et recevoir un feedback constructif, sans agressivité.</li>
+</ul>
+</div>
+<div style="flex: 1; min-width: 280px;">
+<h4>Gestion du stress et persévérance</h4>
+<ul>
+<li>Aborder un <strong>contrôle ou un examen</strong> avec plus de sérénité.</li>
+<li>Gérer la frustration face à un exercice difficile sans abandonner.</li>
+<li>Apprendre de ses erreurs pour mieux réussir ensuite.</li>
+</ul>
+</div>
+<div style="flex: 1; min-width: 280px;">
+<h4>Résolution de problèmes et esprit critique</h4>
+<ul>
+<li>Analyser une situation complexe (un problème de maths, une expérience scientifique) pour trouver une solution.</li>
+<li>Anticiper les conséquences de ses actions.</li>
+<li>Adapter sa stratégie face à un obstacle imprévu.</li>
+</ul>
+</div>
+</div>
+</section>
+<section class="section card" style="text-align:center;">
+<h2>Notre kit pédagogique</h2>
+<p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
+<a class="btn btn-primary" download="" href="assets/kit-pedagogique.pdf"> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
+</section>
+<section class="section card">
+<h2>Nos partenaires institutionnels</h2>
+<p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
+<div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
+<img alt="Logo de la commune de Walhain" decoding="async" loading="lazy" src="assets/images/logo_walhain.png" style="max-height: 80px; object-fit: contain;"/>
+<img alt="Logo de la Fédération Belge d'Esport" decoding="async" loading="lazy" src="assets/images/logo_besf.png" style="max-height: 80px; object-fit: contain;"/>
+</div>
+</section>
+<section class="section card">
+<h2>Construisons un partenariat</h2>
+<p>Nous sommes convaincus que la collaboration entre les structures éducatives et des initiatives comme la nôtre est essentielle. Nous sommes à votre disposition pour :</p>
+<ul>
+<li>Présenter notre projet au sein de votre établissement.</li>
+<li>Organiser un atelier de démonstration pour un groupe d'élèves.</li>
+<li>Discuter de toute autre forme de collaboration.</li>
+</ul>
+<p style="text-align:center; margin-top:2em;"><a class="btn btn-primary" href="contact.html">Contactez-nous pour échanger</a></p>
+</section>
+</main>
+<div id="footer"></div>
+<script src="assets/js/include.js"></script>
+<script defer="True" src="assets/js/cookie-consent.js"></script></body>
 </html>
