--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mentions légales - Ludus Mentis</title>
+<title>Politique de confidentialité - Ludus Mentis</title>
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <div id="header"></div>
 <main id="main" class="container mx-auto px-4 py-8 prose max-w-none">
-<h1>Mentions légales</h1>
-<p>Mentions légales pour Ludus Mentis. Voir informations d'éditeur, hébergeur, propriété intellectuelle et contact.</p>
+<h1>Politique de confidentialité</h1>
+<p>Politique de confidentialité (RGPD) : données collectées via formulaires, consentement cookies (analytics/marketing), droits des personnes, contact : info@ludusmentis.be.</p>
 </main>
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
